--- a/gaelyk-guice-plugin/build.gradle
+++ b/gaelyk-guice-plugin/build.gradle
@@ -1,7 +1,7 @@
-repositories {
-	mavenCentral()
-}
-
 dependencies {
 	compile 'com.google.inject.extensions:guice-servlet:3.0'
+	testCompile 'org.spockframework:spock-core:0.7-groovy-1.8-SNAPSHOT', {
+		exclude group: 'org.codehaus.groovy', module: 'groovy-all'
+	}
+	testRuntime 'org.objenesis:objenesis:1.2'
 }
