--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *.iml
 *.ipr
 *.iws
+.gradle
+**/build
+out/
 test-project/src/main/webapp/WEB-INF/classes
 test-project/src/main/webapp/WEB-INF/lib
