Finished happy path functional test for InjectDependenciesCategory and manual injection

--- a/test-project/build.gradle
+++ b/test-project/build.gradle
@@ -33,3 +33,7 @@ task createGroovletsDir {
 }
 
 gaelykPrecompileGroovlet.dependsOn createGroovletsDir
+
+gaeFunctionalTest {
+	systemProperty 'geb.build.reportsDir', new File(reportsDir, 'geb').absolutePath
+}
